--- a/README
+++ b/README
@@ -2,3 +2,6 @@ backbone app based on
 https://github.com/addyosmani/backbone-fundamentals
 https://github.com/addyosmani/backbone-fundamentals/tree/master/practicals/modular-todo-app
 http://backbonetutorials.com/organizing-backbone-using-modules/
+
+Comments, improvements and questions are welcome!
+I managed to test Models and Collections from console executing require(['collections/posts']) and require(['models/post']). I'm also using Twitter Bootstrap
